src/test/ui/generator/sized-yield.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/sized-yield.rs:8:26
   |
LL |      let mut gen = move || {
   |  __________________________^
LL | |
LL | |        yield s[..];
LL | |    };
   | |____^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: the yield type of a generator must have a statically known size

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/sized-yield.rs:12:23
   |
LL |    Pin::new(&mut gen).resume(());
   |                       ^^^^^^ doesn't have a size known at compile-time
   | 
  ::: $SRC_DIR/core/src/ops/generator.rs:LL:COL
   |
LL | pub enum GeneratorState<Y, R> {
   |                         - required by this bound in `GeneratorState`
   |
   = help: the trait `Sized` is not implemented for `str`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
